vcs_db_r8 in operation

--- a/app/src/main/res/layout/content_bio_pap_view.xml
+++ b/app/src/main/res/layout/content_bio_pap_view.xml
@@ -408,7 +408,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
-            android:layout_marginTop="12dp">
+            android:layout_marginTop="12dp"
+            android:visibility="gone">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -597,7 +598,7 @@
                 <android.support.v4.view.ViewPager
                     android:id="@+id/view_pager_photos"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="32dp"
                     android:background="@color/white"
 
                     />
